[gd_scene load_steps=6 format=2]

[ext_resource path="res://lobby/lobby.gd" type="Script" id=1]
[ext_resource path="res://eingabe.tres" type="Theme" id=2]
[ext_resource path="res://lobby/Header.tres" type="DynamicFont" id=3]
[ext_resource path="res://Buttons.tres" type="DynamicFont" id=4]
[ext_resource path="res://TitleMenu.tres" type="DynamicFont" id=5]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color( 0.380392, 0.12549, 0.0156863, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 332.0
margin_top = 123.0
margin_right = 691.0
margin_bottom = 477.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 359.0
margin_bottom = 145.0
custom_colors/font_color = Color( 0.921569, 0.764706, 0.462745, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Lobby
"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 149.0
margin_right = 359.0
margin_bottom = 293.0
custom_constants/vseparation = 15
custom_constants/hseparation = 15
columns = 2

[node name="NameLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_right = 144.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0.921569, 0.764706, 0.462745, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Name"

[node name="NameTextbox" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 159.0
margin_right = 359.0
margin_bottom = 38.0
rect_min_size = Vector2( 200, 0 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.921569, 0.764706, 0.462745, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Enter Name"
align = 1

[node name="IPLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 53.0
margin_right = 144.0
margin_bottom = 91.0
custom_colors/font_color = Color( 0.921569, 0.764706, 0.462745, 1 )
custom_fonts/font = ExtResource( 5 )
text = "IP-Adresse"

[node name="IPTextbox" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 159.0
margin_top = 53.0
margin_right = 359.0
margin_bottom = 91.0
rect_min_size = Vector2( 200, 0 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.921569, 0.764706, 0.462745, 1 )
custom_fonts/font = ExtResource( 5 )
text = " Enter IP Adress"
align = 1

[node name="PortLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 106.0
margin_right = 144.0
margin_bottom = 144.0
custom_colors/font_color = Color( 0.921569, 0.764706, 0.462745, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Port"
align = 1

[node name="PortTextbox" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 159.0
margin_top = 106.0
margin_right = 359.0
margin_bottom = 144.0
rect_min_size = Vector2( 200, 0 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.921569, 0.764706, 0.462745, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Enter Port"
align = 1

[node name="Join" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 297.0
margin_right = 359.0
margin_bottom = 354.0
custom_colors/font_color_disabled = Color( 0.921569, 0.764706, 0.462745, 1 )
custom_colors/font_color = Color( 0.921569, 0.764706, 0.462745, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Join Game"
flat = true

[connection signal="text_entered" from="CenterContainer/VBoxContainer/GridContainer/NameTextbox" to="." method="_on_NameTextbox_text_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Join" to="." method="_on_Join_pressed"]
